# platform.core.multimedia.libmm-radio

./: AUTHORS  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  ltmain.sh  mm-radio.pc.in  project.config
TC/: tet_scen
TC/utc/: Makefile  tslist  utc_mm_radio_common.h  utc_mm_radio_create_func.c  utc_mm_radio_destroy_func.c  utc_mm_radio_get_frequency_func.c  utc_mm_radio_get_sound_path_func.c  utc_mm_radio_get_state_func.c  utc_mm_radio_realize_func.c  utc_mm_radio_scan_start_func.c  utc_mm_radio_scan_stop_func.c  utc_mm_radio_seek_func.c  utc_mm_radio_set_frequency_func.c  utc_mm_radio_set_message_callback_func.c  utc_mm_radio_set_sound_path_func.c  utc_mm_radio_start_func.c  utc_mm_radio_stop_func.c  utc_mm_radio_unrealize_func.c
debian/: changelog  control  copyright  libmm-radio-dev.install.in  libmm-radio.install.in  rules
packaging/: libmm-radio.changes  libmm-radio.manifest  libmm-radio.spec
src/: Makefile.am  Makefile.in  mm_radio.c  mm_radio_asm.c  mm_radio_audio_focus.c  mm_radio_priv.c  mm_radio_priv_emulator.c
src/include/: mm_radio.h  mm_radio_asm.h  mm_radio_audio_focus.h  mm_radio_priv.h  mm_radio_utils.h
test/: Makefile.am  Makefile.in  mm_radio_rt_api_test.c  mm_radio_rt_api_test.h  mm_radio_test_type.h  mm_radio_testsuite.c
